<resources>
    <string name="app_name">sdkdemo</string>
    <string name="routing_and_navi">路线规划/导航</string>
    <string name="add_marker">添加marker标记</string>
    <string name="select_start_point">选择商家起点:</string>
    <string name="add_stop_point">添加经停点</string>
    <string name="start_routing">开始规划路线</string>
    <string name="cancel_routing">取消规划路线</string>
    <string name="start_simulation_navi">开启模拟导航</string>
    <string name="start_navi">开始导航</string>
    <string name="cancel_navi">取消导航</string>
    <string name="add_marker_point">地图marker标记</string>
    <string name="add_marker_point_image">地图marker标记(自定义Image)</string>
    <string name="move_point_to_center">把某个地点屏幕中心</string>
    <string name="remove_marker">移除marker点</string>
    <string name="select_point_from_map">地图选点</string>

</resources>